# Cmini

./: .gitignore  CMakeLists.txt  example.txt  generate.h  grammar.h  input.txt  issues.md  lexer.cpp  lexer.h  main.cpp  output.asm  parser.cpp  parser.h  run.sh  symbol.cpp  symbol.h  symboltable.cpp  symboltable.h  test.cpp  test.h  token.h
